--- a/Web Interface/index.html
+++ b/Web Interface/index.html
@@ -3,27 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Measura</title>
+  <title>Measura Data</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="battery-info">
-    <p id="battery-percentage">27%</p>
-  </div>
-  <h2 id="height-title">Ketinggian Individu</h2>
-  <div id="height-display">
-    <p id="height-value">-</p>
-  </div>
-
-  <table id="heightsTable">
-    <tr>
-      <th>Timestamp</th>
-      <th>Height (cm)</th>
-    </tr>
+  <h1>Data Pengukuran</h1>
+  <table>
+    <thead>
+      <tr>
+        <th>Tarikh</th>
+        <th>Nama</th>
+        <th>Ketinggian (cm)</th>
+      </tr>
+    </thead>
+    <tbody id="data-table-body">
+      <!-- Data will be inserted here dynamically -->
+    </tbody>
   </table>
 
-  <button onclick="exportToCSV()">Muat Turun Data</button>
-
+  <script src="https://unpkg.com/@supabase/supabase-js"></script>
   <script src="index.js"></script>
 </body>
 </html>
